Add bookmark list

--- a/index.html
+++ b/index.html
@@ -61,8 +61,17 @@
         <h1 class="hero__title">
           World movies
         </h1>
-        <ul class="hero__list">
-        </ul>
+        <div class="hero__list-wrap">
+          <ul class="hero__list">
+          </ul>
+          <div class="hero__bookmark-wrap">
+            <h2 class="hero__bookmark-title fs-2">
+              Selected movies
+            </h2>
+            <ul class="hero__bookmark-list">
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
     <!-- hero section end -->
